<resources>
    <string name="app_name">ACSEA Event App</string>
    <string name="title_activity_login">login</string>
    <string name="title_privacy_policy">PRIVACY POLICY</string>
    <string name="privacy_policy_declartion"> Asian-Canadian Special Events Association (ACSEA)
        is committed to protecting the privacy and security of personal information held about its patrons.
        Our purpose is to assure anyone who does business with us that ACSEA complies with the Privacy Act,
        the Personal Information Protection and Electronic Documents Act, and Canada’s Anti-Spam Legislation.
    </string>
    <string name="privacy_policy_declaration_p2">
        The following is a statement of our commitment to ensure that the collection, use,
        disclosure and security of your personal information complies with the provisions of the Privacy Act,
        the Personal Information Protection and Electronic Documents Act, and Canada’s Anti-Spam Legislation,
        in terms of legal conformity and ethical practice.</string>
    <string name="privacy_policy_collection_of_info">COLLECTION OF INFORMATION</string>
    <string name="privacy_policy_collection_info_description">ACSEA only collects personal information
        from:  Attendees (directly or through the venue box offices and partnering ticket agencies)
        Donors Members Volunteers Others who have shown an interest in ACSEA This information is
        collected by a variety of methods: phone, fax, mail, email, online, or in person.</string>
    <string name="privacy_policy_use_of_info">USE OF INFORMATION</string>
    <string name="privacy_policy_use_of_info_description">
        ACSEA uses personal information to better serve our patrons and to expand our community of support.
        This primarily includes using the information:
        To deliver services to provide information about tickets, events, membership and donations
        To thank supporters, fulfill subscriber and donor benefits
        To invite supporters to special events
        To sell tickets and solicit donations
        For service phone calls and e-mails
        ACSEA is committed to using personal information in a respectful and useful way.
        ACSEA is also committed to making sure patrons do not receive more than a reasonable number
        of emails, letters or phone calls.</string>
    <string name="privacy_policy_disclosure">DISCLOSURE OF INFORMATION</string>
    <string name="privacy_policy_disclosure_description">ACSEA treats its obligations with respect to
        the use and disclosure of personal information very seriously. Generally, we will only use or
        disclose personal information for the primary purpose that it was collected or for a purpose
        related to the primary purpose that you would reasonably expect it to be used.
        The ACSEA will not sell, rent or share your personal information.</string>
    <string name="privacy_policy_storage">STORAGE OF INFORMATION</string>
    <string name="privacy_policy_storage_description">Personal information is stored in our database(s)
        on a secure server and in hard copy files. Only authorized ACSEA personnel have access to this information.
        ACSEA uses personal information to better serve our patrons and to expand our community of support.</string>
    <string name="privcay_policy_accountability">ACCOUNTABILITY</string>
    <string name="privacy_policy_accountability_descritption">ACSEA does its best to ensure that all
        information is recorded accurately—if you notice any errors in our correspondence with you
        or if your personal information changes, please contact us at info@acsea.ca to update your file.
        If you do not wish to be contacted by phone, mail or email, please contact us and we
        will ensure that your request is honoured. If you have any questions about ACSEA’s privacy
        policy or concerns about the way that your information is being used, please contact us at
        info@acsea.ca.</string>
    <string name="city_prompt">Choose a city </string>
    <string-array name="city_array">
        <item>Toronto</item>
        <item>Vancouver</item>
    </string-array>
    <string name="title_activity_sponsor">sponsor</string>
    <string name="Privacy_Policy"> <u> PRIVACY POLICY</u> </string>
    <string name="Term_Of_Use"> <u> TERMS OF USE </u> </string>
    <string name="Register"><u> Register </u></string>

    <string name="banner_ad_vancouver">ca-app-pub-1748064502558088/6966885993</string>
    <string name="banner_ad_toronto">ca-app-pub-1748064502558088/5270660947</string>
    <string name="full_page_ad_vancouver">ca-app-pub-1748064502558088/3926268612</string>
    <string name="full_page_ad_toronto">ca-app-pub-1748064502558088/5246610210</string>
    <string name="artistic_direction">
Survival for many is an act of courage; to live is to find meanings in the suffering.
        When people are displaced and lives are detoured,
        the tenacity one demonstrates to survive is the essence of beauty. \n \n
        Painters, musicians, poets and artists love to capture this quality in people and these works often
        inspire others to find the strength to continue their path. \n \n

Wars often show the worst in mankind as violence is the most convenient way for the power to be gained.
        Like many places in Asia, Vietnam and Taiwan shared chapters of histories resisting the
        intruders and living under the colonizers.  Time and time again, the people rise to savour
        their families, cultures and homeland; stories of remarkable women keeping families together
        resemble the vary tenacity required in survival. \n \n

What is courage really like? When does survival become art?</string>
    <string name="termofuse">Thank you for using ACSEA Event App (our “app”). By visiting
        our site or using any associated app and user interfaces, you indicate your acknowledgment
        and acceptance of the Terms and Conditions and Privacy Policy. If you do not agree or cannot
        comply with these terms and conditions, then you may not use this site or any associated app
        and user interfaces.\n \n
<b>TERM TERMINATION</b> \n
These terms and conditions are applicable to you upon your accessing the site and/or completing the
        registration process through the site and/or the ACSEA app. These terms and conditions, or
        any part of them, may be terminated by Asian-Canadian Special Events Association without
        notice at any time, for any reason. The provisions relating to Copyrights, Trademarks,
        Participation Disclaimer, and Indemnification shall survive any termination.\n \n
<b>COPYRIGHTS </b> \n
The content included in any ACSEA site and/or associated app, including but not limited to text,
        graphics or code is copyrighted as a collective work under the Canadian copyright laws,
        and is the property of the Asian-Canadian Special Events Association, identified by the
        name or logo on materials posted, is identified as being the copyright owner. If another
        party is noted as a copyright holder, please contact that party for permission to use the
        materials in question. \n \n
<b> THE ASIAN-CANADIAN SPECIAL EVENTS ASSOCIATION (ACSEA) EVENT TERMS AND CONDITIONS </b> \n
Events may consist of festivals, concerts or other forms of advertised events whether attendance
        is free or if an admission fee is charged to attend.
Your name and contact information collected during the registration process may be shared with
        event participants and the speakers in the form of a delegate list. By registering for
        the event you are consenting to the use and disclosure of the information for this purpose.
        Registration information will not be shared with event exhibitors, sponsors and other
        conference delegates.
ACSEA reserves the right to cancel events at any time prior to the scheduled date; in this case,
        our liability is limited to a full refund of the session fee. Confirmation of registration
        to any specific event will be sent by email before the event or workshop. Payment is due
        upon registration.
Registrants who do not show up for the event in question are not eligible for a refund.
Cancellations received by our offices by mail/email within the specified cancellation date are
        refundable and may be subject to an administration fee. Refunds will not be given after
        that date, however, delegate substitution is permitted.
For the duration of ACSEA events, all volunteers and community groups that are on festival grounds
        must consent to the use and possible distribution of their own photo. ACSEA will not sell,
        trade or provide any information from the ACSEA database, including personal information to
        companies, solicitors or other third parties for any reason. These photos will be used solely
        for promotional purposes for the festival. \n \n
<b> USE OF SITE </b> \n
Harassment in any manner or form on the site, including via e-mail, chat, or by use of obscene or
        abusive language, is strictly forbidden. Impersonation of others, including
        Asian-Canadian Special Events Association employees, host, or representative,
        as well as other members or visitors on the site is prohibited.
You may not upload to, distribute, or otherwise publish through the site any content which is
        libellous, defamatory, obscene, threatening, invasive of privacy or publicity rights,
        abusive, illegal, or otherwise objectionable which may constitute or encourage a criminal
        offense, violate the rights of any party or which may otherwise give rise to liability or
        violate any law.
You may not upload commercial content on the site or use the site to solicit others to join or
        become members of any other commercial online service or other organization.
The Asian-Canadian Special Events Association reserves the right to block or remove communications
        or materials that it determines to be (a) abusive, defamatory, or obscene, (b) fraudulent,
        deceptive, or misleading, (c) in violation of a copyright, trademark or; other intellectual
        property right of another or (d) offensive or otherwise unacceptable to the Asian-Canadian
        Special Events Association at its sole discretion.\n \n
<b> INDEMNIFICATION </b>
You agree to indemnify, defend, and hold harmless Asian-Canadian Special Events Association,
        its officers, directors, employees, and suppliers (collectively the “Service Providers”)
        from and against all losses, expenses, damages and costs, including reasonable attorneys’
        fees, resulting from any violation of these terms and conditions or any activity related to
        your account (including negligent or wrongful conduct) by you or any other person accessing
        our site using your internet account.\n \n
<b> THIRD PARTY LINKS </b> \n
In an attempt to provide increased value to our visitors, Asian-Canadian Special Events Association
        may link to sites operated by third parties. However, even if the third party is an
        affiliate, the Asian-Canadian Special Events Association has no control over these linked
        sites, all of which have separate privacy and data collection practices, independent of the
        Asian-Canadian Special Events Association.
These linked sites are only for your convenience and therefore you access them at your own risk.
        Nonetheless, the Asian-Canadian Special Events Association seeks to protect the integrity
        of its web site, app and the links placed upon it and therefore requests any feedback on not
        only its own site and app but for sites it links to as well (including if a specific link
        does not work).
</string>
</resources>
