<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundwithblue"
    tools:context=".privacypolicy">

    <ScrollView
        style="@android:style/Widget.ScrollView"
        android:layout_width="295dp"
        android:layout_height="413dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="143dp"
        android:overScrollMode="never"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:scrollbarDefaultDelayBeforeFade="0"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="3dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbarThumbVertical="@color/coloryellow"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_privacy_policy"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:text="@string/privacy_policy_declartion"
                android:textColor="@android:color/background_light"
                tools:layout_editor_absoluteX="119dp"
                tools:layout_editor_absoluteY="88dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/privacy_policy_collection_of_info"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="430dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_collection_info_description"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/privacy_policy_use_of_info"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_declaration_p2"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_use_of_info_description"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/privacy_policy_disclosure"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_disclosure_description"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/privacy_policy_storage"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:text="@string/privacy_policy_storage_description"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/privcay_policy_accountability"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_accountability_descritption"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/privacyPolicyBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="357dp"
        android:layout_marginRight="357dp"
        android:layout_marginBottom="685dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backbtn" />
</android.support.constraint.ConstraintLayout>